--- a/index.html
+++ b/index.html
@@ -16,8 +16,54 @@
 		<div class="gameBox">
 
 		</div>
-		<div class="info">剩余雷数 : <span class="mineNum"></span></div>
+		<div class="info">
+			<div>剩余雷数 : <span class="mineNum"></span></div>
+			<div>已插旗数 ：<span class="surNum"></span></div>
+			<form >
+				<input type="text" id="time" value="00:00" style="margin-top: 4px;">
+				<div style="margin-top: 5px; ">
+					<input type="button" value="开始">
+					<input type="button" value="结束">
+					<input type="button" value="重置">
+				</div>
+				
+			</form>
+		
+		</div>
 	</div>
 	<script src="js/index.js"></script>
+	
+	
+<script>
+
+    var oTxt=document.getElementsByTagName("input")[0];
+    var oStart=document.getElementsByTagName("input")[1];
+    var oStop=document.getElementsByTagName("input")[2];
+    var oReset=document.getElementsByTagName("input")[3];
+    var n= 0, timer=null;
+    //开始计时
+    oStart.onclick= function () {
+        clearInterval(timer);
+        timer=setInterval(function () {
+            n++;
+            var m=parseInt(n/60);
+            var s=parseInt(n%60);
+            oTxt.value=toDub(m)+":"+toDub(s);
+        },1000/60);
+    };
+    //暂停并且清空计时器
+    oStop.onclick= function () {
+        clearInterval(timer);
+    }
+    //重置
+    oReset.onclick= function () {
+        oTxt.value="00:00";
+        n=0;
+    }
+    //补零
+    function toDub(n){
+        return n<10?"0"+n:""+n;
+    }
+</script>
 </body>
 </html>
